--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     
     <script type="module" src="/cliff-blog/assets/app.-fee4n5i.js"></script>
     <link rel="preload" href="/cliff-blog/assets/inter-roman-latin.Bu8hRsVA.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="icon" href="爱宠29.png">
+    <link rel="icon" href="img/爱宠29.png">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
     <script id="check-mac-os">document.documentElement.classList.toggle("mac",/Mac|iPhone|iPod|iPad/i.test(navigator.platform));</script>
   </head>
