--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="modulepreload" href="/cliff-blog/assets/chunks/theme.BJ5Py2S9.js">
     <link rel="modulepreload" href="/cliff-blog/assets/chunks/framework.DYuf3uD6.js">
     <link rel="modulepreload" href="/cliff-blog/assets/index.md.CiVzGsu9.lean.js">
-    <link rel="icon" href="爱宠29.png">
+    <link rel="icon" href="img/爱宠29.png">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
     <script id="check-mac-os">document.documentElement.classList.toggle("mac",/Mac|iPhone|iPod|iPad/i.test(navigator.platform));</script>
   </head>
